ast/src/snapshots/ast__lexer__tests__escaped_backslash.snap
---
source: ast/src/lexer.rs
expression: tokens
---
[
    PositionToken {
        token: StringLiteral(
            "\\\\",
        ),
        line: 0,
        col: 4,
    },
]
