ast/src/snapshots/ast__lexer__tests__supere.snap
---
source: ast/src/lexer.rs
expression: tokens
---
[
    Package,
    Identifier(
        "ch",
    ),
    Dot,
    Identifier(
        "emilycares",
    ),
    Semicolon,
    NewLine,
    NewLine,
    Import,
    Identifier(
        "java",
    ),
    Dot,
    Identifier(
        "io",
    ),
    Dot,
    Identifier(
        "IOException",
    ),
    Semicolon,
    NewLine,
    NewLine,
    Public,
    Class,
    Identifier(
        "Super",
    ),
    Extends,
    Identifier(
        "IOException",
    ),
    LeftParenCurly,
    NewLine,
    RightParenCurly,
    NewLine,
    EOF,
]
