ast/src/snapshots/ast__lexer__tests__thrower.snap
---
source: ast/src/lexer.rs
expression: tokens
---
[
    Package,
    Identifier(
        "ch",
    ),
    Dot,
    Identifier(
        "emilycares",
    ),
    Semicolon,
    NewLine,
    NewLine,
    Import,
    Identifier(
        "java",
    ),
    Dot,
    Identifier(
        "io",
    ),
    Dot,
    Identifier(
        "IOException",
    ),
    Semicolon,
    NewLine,
    NewLine,
    Public,
    Class,
    Identifier(
        "Thrower",
    ),
    LeftParenCurly,
    NewLine,
    Public,
    Void,
    Identifier(
        "ioThrower",
    ),
    LeftParen,
    RightParen,
    Throws,
    Identifier(
        "IOException",
    ),
    LeftParenCurly,
    RightParenCurly,
    NewLine,
    Public,
    Void,
    Identifier(
        "ioThrower",
    ),
    LeftParen,
    Int,
    Identifier(
        "a",
    ),
    RightParen,
    Throws,
    Identifier(
        "IOException",
    ),
    Comma,
    Identifier(
        "IOException",
    ),
    LeftParenCurly,
    RightParenCurly,
    NewLine,
    RightParenCurly,
    NewLine,
    EOF,
]
